2022-02-22  Jonathan Bedard  <jbedard@apple.com>

        [git-webkit] Link to GitHub wiki
        https://bugs.webkit.org/show_bug.cgi?id=237048
        <rdar://problem/89307995>

        Reviewed by Ryan Haddad.

        * Scripts/libraries/webkitscmpy/setup.py: Bump version.
        * Scripts/libraries/webkitscmpy/webkitscmpy/__init__.py: Ditto.
        * Scripts/libraries/webkitscmpy/webkitscmpy/program/setup.py:
        (Setup.main): Add GitHub wiki link.
        * Scripts/libraries/webkitscmpy/webkitscmpy/test/setup_unittest.py:
        (TestSetup.test_github):

2022-02-22  Philippe Normand  <pnormand@igalia.com>

        [GStreamer] Switch media player to playbin3
        https://bugs.webkit.org/show_bug.cgi?id=236884

        Reviewed by Xabier Rodriguez-Calvar.

        Replace WEBKIT_GST_USE_PLAYBIN3 with WEBKIT_GST_USE_PLAYBIN2 that allows to opt-out of
        playbin3, if this is desired.

        * Scripts/webkitpy/port/gtk.py:
        (GtkPort.setup_environ_for_server):
        * Scripts/webkitpy/port/wpe.py:
        (WPEPort.setup_environ_for_server):

2022-02-22  Jonathan Bedard  <jbedard@apple.com>

        [git-webkit] Extract revision from `git svn dcommit`
        https://bugs.webkit.org/show_bug.cgi?id=236849
        <rdar://problem/89155179>

        Reviewed by Ryan Haddad.

        * Scripts/libraries/webkitscmpy/setup.py: Bump version.
        * Scripts/libraries/webkitscmpy/webkitscmpy/__init__.py: Ditto.
        * Scripts/libraries/webkitscmpy/webkitscmpy/mocks/local/git.py:
        (Git): Thoroughly mock `dcommit`
        * Scripts/libraries/webkitscmpy/webkitscmpy/program/land.py:
        (Land.main): Extract committed SVN revision from `git svn dcommit` command to accurately
        match landed commits to the pull request that generated them.
        * Scripts/libraries/webkitscmpy/webkitscmpy/test/land_unittest.py:
        (repository): Add revision to local commit.

2022-02-22  Dean Jackson  <dino@apple.com>
